# Aegies-Height

./: .gitignore  Dockerfile.simulator  README.md  RELEASE_NOTES.md  pyproject.toml  render.yaml  requirements-sim-server.txt  requirements-vision.txt
agentech/: __init__.py  aegis.py  mujoco_sim.py  sim_server.py
agentech_sdk_wrapper/: README.md  pyproject.toml
agentech_sdk_wrapper/agentech/: __init__.py  actions.py  adapters.py  config.py  dog.py  exceptions.py  models.py  runtime.py
agentech_sdk_wrapper/docs/: agentech_sdk_functions.md
agentech_sdk_wrapper/examples/: dry_run_demo.py  simple_dog.py  simulation_demo.py
agentech_sdk_wrapper/tests/: test_sdk.py
calibration_targets/: charuco_7x10_25mm_18mm_4x4_50_letter_300dpi.json
calibrations/: blue_grid_camera_calibration_best.json  charuco_camera_calibration_refined.json
docs/: accepted_laser_images_cleanup.md  agentech_library.md  camera_height_workflow.md  dog_testing_runbook.md  pi_mobile_dashboard.md  sdk_interface_status.md  sdk_interface_status_reply_to_developer.md  secondary_development_process.md
examples/: README.md  agentech_mujoco_preview.py  agentech_quickstart.py  student_forward.py
scripts/: agentech_simulate_code.py  attitude_pitch_step.py  attitude_pitch_up_hold.py  calibrate_blue_wall_grid.py  collect_accepted_laser_images_from_robot.ps1  compare_frames.py  estimate_level_row_from_box.py  generate_led_logo_chunks.py  generate_led_logo_pixels.py  generate_manual_led_letters.py  grab_uncompressed_frame.sh  pi_height_dashboard.py  rectify_wall_grid.py  robot_copy_pexpect.py  (+4 more)
(+24 files in other folders)
