[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentech"
version = "0.1.0"
description = "Simple Python controls for Agentech Aegis robot dogs."
readme = "docs/agentech_library.md"
requires-python = ">=3.10"
authors = [
  { name = "Agentech" }
]
dependencies = []

[project.optional-dependencies]
robot = [
  "ff_sdk==0.1.0a1"
]
sim = [
  "mujoco>=3.2"
]

[tool.setuptools.packages.find]
include = ["agentech*"]

[tool.setuptools.package-data]
agentech = [
  "assets/aegis/urdf/*",
  "assets/aegis/meshes/*"
]
