[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentech-sdk-wrapper"
version = "0.1.0"
description = "Synchronous and asynchronous Python wrapper for Aegis quadruped control."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Agentech" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agentech*"]
